--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,9 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/phone
-db.username=phone
-db.password=phone
+db.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_c5954d7f48ce859?reconnect=true
+db.username=b747d0e956dd8a
+db.password=49316b39
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=false
 hibernate.format_sql=true
+CLEARDB_DATABASE_URL: mysql://b747d0e956dd8a:49316b39@eu-cdbr-west-01.cleardb.com/heroku_c5954d7f48ce859?reconnect=true
