--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_c5954d7f48ce859?reconnect=true
+db.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com:3306/heroku_c5954d7f48ce859?reconnect=true
 db.username=b747d0e956dd8a
 db.password=49316b39
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
